--- a/web/package.json
+++ b/web/package.json
@@ -8,11 +8,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.15",
     "react-webcam": "^7.1.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
