feat : 인공지능 out of memory 수정

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,5 +1,5 @@
 /__pycache__
-/static/inputs/
-/static/original/
-/static/outpust/
+/static/inputs/*.*
+/static/original/*.*
+/static/outputs/*.*
 .DS_Store
