--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.5.1",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
